[gd_scene load_steps=12 format=3 uid="uid://di60wanbtymov"]

[ext_resource type="Script" path="res://menus/settings/settings_menu.gd" id="1_0u47g"]
[ext_resource type="Texture2D" uid="uid://bq57kcmnv8ggp" path="res://resources/Sprites/CheckBox/checkbox_normal.png" id="4_fjjgy"]
[ext_resource type="Texture2D" uid="uid://bl7gtlqdfuvc5" path="res://resources/Sprites/CheckBox/checkbox_pressed.png" id="5_e5prm"]
[ext_resource type="Texture2D" uid="uid://ds1i31tr5wqrh" path="res://resources/Sprites/icon_16px.png" id="6_1cbd4"]
[ext_resource type="Texture2D" uid="uid://c1sklka53w4ud" path="res://resources/Sprites/CheckBox/checkbox_hover.png" id="6_i8nqj"]
[ext_resource type="StyleBox" uid="uid://c2nqiwudvaseb" path="res://resources/Styles/Standard Button/standard_button_normal_style.tres" id="6_wrgi0"]
[ext_resource type="StyleBox" uid="uid://doq33mqbb3i7r" path="res://resources/Styles/Standard Button/standard_button_hover_style.tres" id="7_4yotx"]
[ext_resource type="StyleBox" uid="uid://dd6kvr76jafiq" path="res://resources/Styles/Standard Button/standard_button_pressed_style.tres" id="8_vwleo"]

[sub_resource type="FontVariation" id="FontVariation_xbj33"]
variation_embolden = 2.0

[sub_resource type="ImageTexture" id="ImageTexture_58v6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjifk"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0u47g")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 9.0
offset_right = 640.0
offset_bottom = 54.0
theme_override_fonts/font = SubResource("FontVariation_xbj33")
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="FullscreenButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 75.0
offset_right = 291.0
offset_bottom = 91.0
toggle_mode = true
texture_normal = ExtResource("4_fjjgy")
texture_pressed = ExtResource("5_e5prm")
texture_hover = ExtResource("6_i8nqj")

[node name="Label" type="Label" parent="FullscreenButton"]
layout_mode = 0
offset_left = -102.0
offset_top = -4.0
offset_right = -23.0
offset_bottom = 20.0
text = "Fullscreen"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 137.0
offset_right = 418.0
offset_bottom = 154.0
theme_override_icons/grabber = ExtResource("6_1cbd4")
theme_override_icons/grabber_highlight = ExtResource("6_1cbd4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="MasterVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="MasterLabel" type="Label" parent="MasterVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Master"

[node name="MusicVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 168.0
offset_right = 418.0
offset_bottom = 185.0
theme_override_icons/grabber = ExtResource("6_1cbd4")
theme_override_icons/grabber_highlight = ExtResource("6_1cbd4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="MusicVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="MusicLabel" type="Label" parent="MusicVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Music"

[node name="EffectsVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 200.0
offset_right = 418.0
offset_bottom = 217.0
theme_override_icons/grabber = ExtResource("6_1cbd4")
theme_override_icons/grabber_highlight = ExtResource("6_1cbd4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="EffectsVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="EffectsLabel" type="Label" parent="EffectsVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Effects"

[node name="VoicesVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 234.0
offset_right = 418.0
offset_bottom = 251.0
theme_override_icons/grabber = ExtResource("6_1cbd4")
theme_override_icons/grabber_highlight = ExtResource("6_1cbd4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="VoicesVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="VoicesLabel" type="Label" parent="VoicesVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Voices"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 297.0
offset_right = 386.0
offset_bottom = 326.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = ExtResource("7_4yotx")
theme_override_styles/pressed = ExtResource("8_vwleo")
theme_override_styles/normal = ExtResource("6_wrgi0")
text = "BACK"

[connection signal="toggled" from="FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="drag_ended" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="EffectsVolumeSlider" to="." method="_on_effects_volume_slider_drag_ended"]
[connection signal="value_changed" from="EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="drag_ended" from="VoicesVolumeSlider" to="." method="_on_voices_volume_slider_drag_ended"]
[connection signal="value_changed" from="VoicesVolumeSlider" to="." method="_on_voices_volume_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
